--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261575296005618%22%3A%22S0Tquyph%22%2C%2261575505431044%22%3A%22wT2FR8z8%22%2C%2261575300662779%22%3A%22I4d9grYG%22%2C%2261578497695280%22%3A%226c7oCTeA%22%2C%2261579272091576%22%3A%229Mrq9MwI%22%7D",
+        "value": "%7B%2261575296005618%22%3A%22S0Tquyph%22%2C%2261575505431044%22%3A%22wT2FR8z8%22%2C%2261575300662779%22%3A%22I4d9grYG%22%2C%2261578497695280%22%3A%226c7oCTeA%22%2C%2261579272091576%22%3A%22gPdHGn1L%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-08-25T19:29:16.135Z",
-        "lastAccessed": "2025-08-25T19:29:16.135Z"
+        "creation": "2025-08-28T20:53:27.182Z",
+        "lastAccessed": "2025-08-28T20:53:27.182Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-25T19:29:16.135Z",
-        "lastAccessed": "2025-08-25T19:29:16.135Z"
+        "creation": "2025-08-28T20:53:27.182Z",
+        "lastAccessed": "2025-08-28T20:53:27.182Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-25T19:29:16.135Z",
-        "lastAccessed": "2025-08-25T19:29:16.135Z"
+        "creation": "2025-08-28T20:53:27.182Z",
+        "lastAccessed": "2025-08-28T20:53:27.182Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-25T19:29:16.135Z",
-        "lastAccessed": "2025-08-25T19:29:16.135Z"
+        "creation": "2025-08-28T20:53:27.182Z",
+        "lastAccessed": "2025-08-28T20:53:27.182Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-25T19:29:16.135Z",
-        "lastAccessed": "2025-08-25T19:29:16.135Z"
+        "creation": "2025-08-28T20:53:27.182Z",
+        "lastAccessed": "2025-08-28T20:53:27.182Z"
     },
     {
         "key": "pas",
@@ -50,71 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-25T19:29:16.135Z",
-        "lastAccessed": "2025-08-25T19:29:16.135Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_GB",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-25T19:29:16.135Z",
-        "lastAccessed": "2025-08-25T19:29:16.135Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2.8125",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-25T19:29:16.135Z",
-        "lastAccessed": "2025-08-25T19:29:16.135Z"
-    },
-    {
-        "key": "wd",
-        "value": "384x832",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-25T19:29:16.135Z",
-        "lastAccessed": "2025-08-25T19:29:16.135Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61579272091576",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-25T19:29:16.135Z",
-        "lastAccessed": "2025-08-25T19:29:16.135Z"
-    },
-    {
-        "key": "xs",
-        "value": "50%3AsoQ9I0cN4s6GpQ%3A2%3A1756150128%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-25T19:29:16.135Z",
-        "lastAccessed": "2025-08-25T19:29:16.135Z"
-    },
-    {
-        "key": "fr",
-        "value": "0MmXGi5OoGPsKoWdq.AWcH9CSCQwvnBm8Lo85453fG2_4bFWr9uYbvj4BbQVXE0s3zX2k.Bn_fCK..AAA.0.0.BorLl2.AWd17eD4jO7OlvnGyUoUwDsQGuM",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-25T19:29:16.135Z",
-        "lastAccessed": "2025-08-25T19:29:16.136Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "101215140%3BT%3A29269169",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-25T19:29:16.136Z",
-        "lastAccessed": "2025-08-25T19:29:16.136Z"
+        "creation": "2025-08-28T20:53:27.182Z",
+        "lastAccessed": "2025-08-28T20:53:27.182Z"
     },
     {
         "key": "vpd",
@@ -122,16 +59,79 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-25T19:29:16.136Z",
-        "lastAccessed": "2025-08-25T19:29:16.136Z"
+        "creation": "2025-08-28T20:53:27.182Z",
+        "lastAccessed": "2025-08-28T20:53:27.182Z"
     },
     {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2903%3Btimestamp%3A1756150134",
+        "key": "m_pixel_ratio",
+        "value": "2.8125",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-25T19:29:16.136Z",
-        "lastAccessed": "2025-08-25T19:29:16.136Z"
+        "creation": "2025-08-28T20:53:27.182Z",
+        "lastAccessed": "2025-08-28T20:53:27.182Z"
+    },
+    {
+        "key": "wd",
+        "value": "384x832",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-28T20:53:27.182Z",
+        "lastAccessed": "2025-08-28T20:53:27.182Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61579272091576",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-28T20:53:27.182Z",
+        "lastAccessed": "2025-08-28T20:53:27.182Z"
+    },
+    {
+        "key": "fr",
+        "value": "0MmXGi5OoGPsKoWdq.AWcyhS_agE-2UHoqrFs8rnYKIwSFO4yCeEBMPJwJ_coENsAazPs.Bn_fCK..AAA.0.0.BosMGz.AWewCJVd1n_nozBdw6i5nBNs9ho",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-28T20:53:27.182Z",
+        "lastAccessed": "2025-08-28T20:53:27.182Z"
+    },
+    {
+        "key": "xs",
+        "value": "32%3AcJDL6WFjSqWtdA%3A2%3A1756414387%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-28T20:53:27.182Z",
+        "lastAccessed": "2025-08-28T20:53:27.182Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-28T20:53:27.182Z",
+        "lastAccessed": "2025-08-28T20:53:27.182Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100728548%3BT%3A29273573",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-28T20:53:27.182Z",
+        "lastAccessed": "2025-08-28T20:53:27.182Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2906%3Btimestamp%3A1756414392",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-28T20:53:27.182Z",
+        "lastAccessed": "2025-08-28T20:53:27.182Z"
     }
 ]
