--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-08-30T17:51:13.734Z",
-        "lastAccessed": "2025-08-30T17:51:13.734Z"
+        "creation": "2025-08-31T20:51:03.351Z",
+        "lastAccessed": "2025-08-31T20:51:03.351Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-30T17:51:13.734Z",
-        "lastAccessed": "2025-08-30T17:51:13.734Z"
+        "creation": "2025-08-31T20:51:03.351Z",
+        "lastAccessed": "2025-08-31T20:51:03.351Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-30T17:51:13.734Z",
-        "lastAccessed": "2025-08-30T17:51:13.734Z"
+        "creation": "2025-08-31T20:51:03.351Z",
+        "lastAccessed": "2025-08-31T20:51:03.351Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-30T17:51:13.734Z",
-        "lastAccessed": "2025-08-30T17:51:13.734Z"
+        "creation": "2025-08-31T20:51:03.351Z",
+        "lastAccessed": "2025-08-31T20:51:03.351Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-30T17:51:13.734Z",
-        "lastAccessed": "2025-08-30T17:51:13.734Z"
+        "creation": "2025-08-31T20:51:03.351Z",
+        "lastAccessed": "2025-08-31T20:51:03.351Z"
     },
     {
         "key": "pas",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-30T17:51:13.734Z",
-        "lastAccessed": "2025-08-30T17:51:13.734Z"
+        "creation": "2025-08-31T20:51:03.351Z",
+        "lastAccessed": "2025-08-31T20:51:03.351Z"
     },
     {
         "key": "vpd",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-30T17:51:13.734Z",
-        "lastAccessed": "2025-08-30T17:51:13.734Z"
+        "creation": "2025-08-31T20:51:03.351Z",
+        "lastAccessed": "2025-08-31T20:51:03.351Z"
     },
     {
         "key": "locale",
@@ -68,26 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-30T17:51:13.734Z",
-        "lastAccessed": "2025-08-30T17:51:13.734Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2.8125",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-30T17:51:13.734Z",
-        "lastAccessed": "2025-08-30T17:51:13.734Z"
-    },
-    {
-        "key": "wd",
-        "value": "384x832",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-30T17:51:13.734Z",
-        "lastAccessed": "2025-08-30T17:51:13.734Z"
+        "creation": "2025-08-31T20:51:03.351Z",
+        "lastAccessed": "2025-08-31T20:51:03.351Z"
     },
     {
         "key": "c_user",
@@ -95,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-30T17:51:13.734Z",
-        "lastAccessed": "2025-08-30T17:51:13.734Z"
+        "creation": "2025-08-31T20:51:03.351Z",
+        "lastAccessed": "2025-08-31T20:51:03.351Z"
     },
     {
         "key": "xs",
@@ -104,34 +86,52 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-30T17:51:13.734Z",
-        "lastAccessed": "2025-08-30T17:51:13.734Z"
+        "creation": "2025-08-31T20:51:03.351Z",
+        "lastAccessed": "2025-08-31T20:51:03.351Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.8125",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-31T20:51:03.351Z",
+        "lastAccessed": "2025-08-31T20:51:03.351Z"
+    },
+    {
+        "key": "wd",
+        "value": "384x832",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-31T20:51:03.351Z",
+        "lastAccessed": "2025-08-31T20:51:03.351Z"
     },
     {
         "key": "fr",
-        "value": "0MmXGi5OoGPsKoWdq.AWdaX1fRo3xlKk2FRyG4L74QOzOKRQXSScPN0jTEjgSSZa3iBos.Bn_fCK..AAA.0.0.BoszoB.AWewC9eb0ujHsX9zIw5R24dsHPs",
+        "value": "0MmXGi5OoGPsKoWdq.AWdTcvhnzArlYFbrBkE-h8xYPlBqAx_CvAHplzV77Qy0ErkqBPE.Bn_fCK..AAA.0.0.BotLWx.AWeVxYA9cj_3P1mJl8Qt-szcWHI",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-30T17:51:13.734Z",
-        "lastAccessed": "2025-08-30T17:51:13.734Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "101037041%3BT%3A29276270",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-30T17:51:13.734Z",
-        "lastAccessed": "2025-08-30T17:51:13.734Z"
+        "creation": "2025-08-31T20:51:03.351Z",
+        "lastAccessed": "2025-08-31T20:51:03.351Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2908%3Btimestamp%3A1756576257",
+        "value": "v2%3Bclient_version%3A2908%3Btimestamp%3A1756673457",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-30T17:51:13.734Z",
-        "lastAccessed": "2025-08-30T17:51:13.734Z"
+        "creation": "2025-08-31T20:51:03.351Z",
+        "lastAccessed": "2025-08-31T20:51:03.351Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101230974%3BT%3A29277891",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-31T20:51:03.351Z",
+        "lastAccessed": "2025-08-31T20:51:03.351Z"
     }
 ]
