--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261575296005618%22%3A%22S0Tquyph%22%2C%2261575505431044%22%3A%22wT2FR8z8%22%2C%2261575300662779%22%3A%22I4d9grYG%22%2C%2261578497695280%22%3A%226c7oCTeA%22%2C%2261579272091576%22%3A%22mPwF81UK%22%7D",
+        "value": "%7B%2261575296005618%22%3A%22S0Tquyph%22%2C%2261575505431044%22%3A%22wT2FR8z8%22%2C%2261575300662779%22%3A%22I4d9grYG%22%2C%2261578497695280%22%3A%226c7oCTeA%22%2C%2261579272091576%22%3A%22tY0AZ9XV%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-08-31T20:51:03.351Z",
-        "lastAccessed": "2025-08-31T20:51:03.351Z"
+        "creation": "2025-09-04T09:39:28.507Z",
+        "lastAccessed": "2025-09-04T09:39:28.507Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T20:51:03.351Z",
-        "lastAccessed": "2025-08-31T20:51:03.351Z"
+        "creation": "2025-09-04T09:39:28.507Z",
+        "lastAccessed": "2025-09-04T09:39:28.507Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T20:51:03.351Z",
-        "lastAccessed": "2025-08-31T20:51:03.351Z"
+        "creation": "2025-09-04T09:39:28.507Z",
+        "lastAccessed": "2025-09-04T09:39:28.507Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T20:51:03.351Z",
-        "lastAccessed": "2025-08-31T20:51:03.351Z"
+        "creation": "2025-09-04T09:39:28.507Z",
+        "lastAccessed": "2025-09-04T09:39:28.507Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T20:51:03.351Z",
-        "lastAccessed": "2025-08-31T20:51:03.351Z"
+        "creation": "2025-09-04T09:39:28.507Z",
+        "lastAccessed": "2025-09-04T09:39:28.507Z"
     },
     {
         "key": "pas",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T20:51:03.351Z",
-        "lastAccessed": "2025-08-31T20:51:03.351Z"
+        "creation": "2025-09-04T09:39:28.507Z",
+        "lastAccessed": "2025-09-04T09:39:28.507Z"
     },
     {
         "key": "vpd",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T20:51:03.351Z",
-        "lastAccessed": "2025-08-31T20:51:03.351Z"
+        "creation": "2025-09-04T09:39:28.507Z",
+        "lastAccessed": "2025-09-04T09:39:28.507Z"
     },
     {
         "key": "locale",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T20:51:03.351Z",
-        "lastAccessed": "2025-08-31T20:51:03.351Z"
+        "creation": "2025-09-04T09:39:28.507Z",
+        "lastAccessed": "2025-09-04T09:39:28.507Z"
     },
     {
         "key": "c_user",
@@ -77,61 +77,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T20:51:03.351Z",
-        "lastAccessed": "2025-08-31T20:51:03.351Z"
+        "creation": "2025-09-04T09:39:28.507Z",
+        "lastAccessed": "2025-09-04T09:39:28.507Z"
     },
     {
         "key": "xs",
-        "value": "39%3AtXcgVSR81axybQ%3A2%3A1756576254%3A-1%3A-1",
+        "value": "42%3AQkVtj8bIlhQ2ng%3A2%3A1756975665%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T20:51:03.351Z",
-        "lastAccessed": "2025-08-31T20:51:03.351Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2.8125",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-31T20:51:03.351Z",
-        "lastAccessed": "2025-08-31T20:51:03.351Z"
-    },
-    {
-        "key": "wd",
-        "value": "384x832",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-31T20:51:03.351Z",
-        "lastAccessed": "2025-08-31T20:51:03.351Z"
+        "creation": "2025-09-04T09:39:28.507Z",
+        "lastAccessed": "2025-09-04T09:39:28.507Z"
     },
     {
         "key": "fr",
-        "value": "0MmXGi5OoGPsKoWdq.AWdTcvhnzArlYFbrBkE-h8xYPlBqAx_CvAHplzV77Qy0ErkqBPE.Bn_fCK..AAA.0.0.BotLWx.AWeVxYA9cj_3P1mJl8Qt-szcWHI",
+        "value": "0MmXGi5OoGPsKoWdq.AWcwvq5owN5g3FL59tJm_cw0k1xY9icDDkPJVifyUdrHCAywkf8.Bn_fCK..AAA.0.0.BouV2D.AWdI_DClS3Vod0ZL6mvWQRmPyrQ",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T20:51:03.351Z",
-        "lastAccessed": "2025-08-31T20:51:03.351Z"
+        "creation": "2025-09-04T09:39:28.507Z",
+        "lastAccessed": "2025-09-04T09:39:28.507Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2908%3Btimestamp%3A1756673457",
+        "value": "v2%3Bclient_version%3A2913%3Btimestamp%3A1756978563",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T20:51:03.351Z",
-        "lastAccessed": "2025-08-31T20:51:03.351Z"
+        "creation": "2025-09-04T09:39:28.507Z",
+        "lastAccessed": "2025-09-04T09:39:28.507Z"
     },
     {
         "key": "fbl_st",
-        "value": "101230974%3BT%3A29277891",
+        "value": "101528113%3BT%3A29282976",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-31T20:51:03.351Z",
-        "lastAccessed": "2025-08-31T20:51:03.351Z"
+        "creation": "2025-09-04T09:39:28.507Z",
+        "lastAccessed": "2025-09-04T09:39:28.507Z"
     }
 ]
